--- a/templates/try.html
+++ b/templates/try.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>API to run python code</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
           crossorigin="anonymous">
@@ -13,7 +13,7 @@
 <body>
 
 <div class="form-group" style="padding: 8px">
-    <label for="code">Large textarea</label>
+    <label for="code">Input python code here</label>
     <textarea class="form-control rounded-0" id="code" rows="10"></textarea>
 
     <button id="button" type="button" class="btn btn-primary" onclick="submitform()">Submit</button>
